--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </div>
   <div class="section">
     <h2>Social Media Manager</h2>
-    <p>Contact us on WhatsApp to discuss details:‪+44 7537 175422‬</p>
+    <p>Contact us on WhatsApp to discuss details:+44 7537 175422</p>
   </div>
 </div>
 
